--- a/src/FreeRealmsMapMaker/FreeRealmsMapMaker.csproj
+++ b/src/FreeRealmsMapMaker/FreeRealmsMapMaker.csproj
@@ -5,6 +5,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyTitle>Free Realms Map Maker</AssemblyTitle>
+    <Version>1.0.0</Version>
+    <Authors>Udaya</Authors>
+    <Description>Create maps from Free Realms tile assets.</Description>
+    <Copyright>Copyright (c) Udaya 2025</Copyright>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Udaya-X2/FreeRealmsMapMaker</RepositoryUrl>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <ApplicationIcon>assets\icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +31,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="assets\icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="C:\Users\udaya\GitHub\FreeRealmsMapMaker\src\FreeRealmsMapMaker\.editorconfig" />
   </ItemGroup>
 
