--- a/src/FreeRealmsMapMaker/FreeRealmsMapMaker.csproj
+++ b/src/FreeRealmsMapMaker/FreeRealmsMapMaker.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="9.0.5" />
     <PackageReference Include="ShellProgressBar" Version="5.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
   </ItemGroup>
